# ecoloop-ghgia

./: .coverage.Dionysioss-MacBook-Pro.local.26795.173078  .coverage.Dionysioss-MacBook-Pro.local.39316.XassHqGx  .coveragerc  .gitignore  .scratch.py  Dockerfile  Dockerfile-arm  README.md  SETUP.md  docker-compose.yml  docker.sh  ingest.sh  pyproject.toml  run.sh  service-down.sh  service-up.sh  wait-for.sh
.github/workflows/: ci.yml
app/: database.py  main.py
app/code/: router.py  service.py  test_service.py
app/config/: column_mapping.py  env_config.py
app/emission_data/: router.py  service.py  test_service.py
app/foundation/: adapter_prisma.py  api_fetch.py  arg_parse.py  exception.py  field_type_lister.py  field_type_match.py  task_tracker.py  test_adapter_prisma.py  test_field_type_lister.py  test_field_type_match.py  timer.py
app/iOrganizations/: models.py  router.py  (+1 more)
docs/: design_rationale.md
prisma/: partial_types.py  schema.prisma
scripts/: script_annotations.py  script_calculate_emissions.py  script_coord_mapper.py  script_find_duplicate_sites.py  script_import_code.py  script_import_emission_data.py  script_import_ets.py  script_import_organizations.py  script_import_region.py  script_import_sites.py  script_link_emissions_to_codes.py  script_make_pickles.py  script_populate_empty_addresses.py
test_data/: GirCategoryAdapter.pkl  GirImportAdapter.pkl  IOrgSiteService.pkl  adapter_gir1.pkl  adapter_gir4.pkl  code.ecoloop.import.csv  emission_data.gir1.import.csv  emission_data.gir4.import.xls  factoryOnData.xlsx  factory_data.pkl  region.csv
(+59 files in other folders)
