[tool.poetry]
name = "ecoloop-ghgia"
version = "0.1.0"
description = ""
authors = ["YSAP"]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
fastapi = "^0.104.1"
openpyxl = "^3.1.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"
typing-extensions = "^4.8.0"
xlrd = "^2.0.1"
uvicorn = "^0.24.0.post1"
asyncio = "^3.4.3"
poetry-dotenv-plugin = "^0.2.0"
tqdm = "^4.66.1"
deprecated = "^1.2.14"
python-multipart = "^0.0.6"
prisma = "^0.11.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.21.1"
lxml = "^4.9.3"
aiolimiter = "^1.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipykernel = "^6.27.1"


[tool.poetry.group.jupyter.dependencies]
ipyleaflet = "^0.18.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "app"
]
testpaths = "app"
norecursedirs = [
    ".vscode",
    "__pycache__"
]
